fixed horizontal scroll bug

--- a/pelican-atom/static/css/main.scss
+++ b/pelican-atom/static/css/main.scss
@@ -512,7 +512,8 @@ $size: calc(220px/60);
     .align-center {
         margin-left: auto;
         margin-right: auto;
-        width: fit-content;
+
+        max-width: fit-content;
         // display: block;
     }
 
